Add TikTok draw
